feat: implement AuthController to change password for first time login
